# ase-crewai_project

ase/: README.md  pyproject.toml
ase/knowledge/: user_preference.txt
ase/src/ase/: crew.py  main.py
ase/src/ase/config/: agents.yaml  tasks.yaml
