[project]
name = "ase"
version = "0.1.0"
description = "ase using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
ase = "ase.main:run"
run_crew = "ase.main:run"
train = "ase.main:train"
replay = "ase.main:replay"
test = "ase.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
